[gd_scene load_steps=3 format=3 uid="uid://bbtgciolax7xq"]

[ext_resource type="Script" path="res://scenes/components/shop/shop_interaction_component.gd" id="1_wpj03"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uj6ra"]
radius = 17.0294

[node name="ShopInteractionComponent" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_wpj03")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uj6ra")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
